: update swagger api docs
